--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "negapi",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "content type negotiation",
 	"keywords": ["http", "content negotiation", "accept"],
 	"bugs": {
 		"url": "https://github.com/charmander/negapi/issues"
 	},
 	"license": "ISC",
-	"files": ["index.js", "sort.js"],
+	"files": ["index.js"],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/charmander/negapi"
