Parse in one pass for correctness and speed
Breaking changes:

* Duplicate parameters are now errors even if they have the same value

Bugfixes:

* Strictness of `q` parameter value format
* Parsing of parameter values containing commas or semicolons

The lenient parsing required by RFC 7230 increases the parsing time by about 30% for common cases. This rewrite is still a performance improvement over the previous version, however.

--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
 	"name": "negapi",
-	"version": "1.0.2",
+	"version": "2.0.0",
 	"description": "content type negotiation",
 	"keywords": ["http", "content negotiation", "accept"],
 	"bugs": {
 		"url": "https://github.com/charmander/negapi/issues"
 	},
 	"license": "ISC",
-	"files": ["index.js"],
+	"files": [
+		"index.js",
+		"media-range.js",
+		"parse-accept.js"
+	],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/charmander/negapi"
 	},
 	"devDependencies": {
-		"tap": "^10.7.0"
+		"tap": "10.7.2"
 	}
 }
