--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,10 @@ node_js:
   - "6"
   - "8"
 script: node_modules/.bin/tap test
+before_script:
+  - tmp=$(mktemp --directory)
+  - bash -O dotglob -O extglob -c 'mv !(node_modules|test) "$1"/' bash "$tmp"
+  - pack=$(npm pack "$tmp")
+  - tar --strip-components=1 -x -v -f "$pack"
+  - npm install --no-package-lock
 sudo: false
