--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,10 @@ node_js:
   - "4"
   - "6"
   - "8"
-script: node_modules/.bin/tap test
+  - "9"
 before_script:
   - tmp=$(mktemp --directory)
   - bash -O dotglob -O extglob -c 'mv !(node_modules|test) "$1"/' bash "$tmp"
   - pack=$(npm pack "$tmp")
   - tar --strip-components=1 -x -v -f "$pack"
-  - npm install --no-package-lock
-sudo: false
+  - npm install --no-save
