Use ES6 classes
Node 4 is EOL in one month.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,11 @@
 {
-	"parserOptions": {
-		"ecmaVersion": "5"
-	},
 	"extends": "@charmander/base",
 	"env": {
 		"node": true
 	},
 	"rules": {
 		"no-empty": "off",
-		"no-extra-parens": "off"
+		"no-extra-parens": "off",
+		"no-var": "error"
 	}
 }
