--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - "10"
 before_script:
   - tmp=$(mktemp --directory)
-  - bash -O dotglob -O extglob -c 'mv !(node_modules|test) "$1"/' bash "$tmp"
+  - bash -O dotglob -O extglob -c 'mv !(node_modules|test.js) "$1"/' bash "$tmp"
   - pack=$(npm pack "$tmp")
   - tar --strip-components=1 -x -v -f "$pack"
   - npm install --no-save
