--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,10 +8,10 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [6.x, 8.x, 10.x]
+        node-version: [6.x, 8.x, 10.x, 12.x, 14.x, 15.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2-beta
     - name: Use Node.js ${{ matrix.node_version }}
       uses: actions/setup-node@v1
       with:
