--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	},
 	"devDependencies": {
 		"@charmander/eslint-config-base": "1.2.0",
-		"@charmander/test": "0.2.0"
+		"@charmander/test": "0.4.0-pre.2"
 	},
 	"engines": {
 		"node": ">=6.0.0"
